--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header">
 <span>
-    <img src="/assets/img/book.png" alt="aventuras de mike">
+    <img src="/assets/img/book.png" alt="aventuras de mike2">
 </span>
 <span>
     <h1>BOOKSTORE APPLICATION</h1>
